# MultimodalGraphemes

./: README.md  pyproject.toml
data/: train_multi_diacritics.csv
src/: fastai_experiment.py  train.py
utils/: create_image_pkl.py
