[tool.poetry]
name = "bengali_grapheme"
readme = "README.md" 
authors = ['alexstedev']
version = "0.0.0" 
description = "Bengali Grapheme Classification"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

torch = "^2.0.0"
lightning = "2.0.1"
optuna = "^3.1.0"
scipy = "^1.8"
pandas = ">=1.3.0,<=3.0.0"
scikit-learn = "*"
matplotlib = "*"
numpy = "*"
torchvision = "^0.15.2"
opencv-python = "^4.8.0.76"
scikit-image = "^0.21.0"
pyarrow = "^13.0.0"
fastparquet = "^2023.8.0"
pillow = "^10.0.0"
cnn-finetune = "^0.6.0"
albumentations = "^1.3.1"
timm = "^0.9.7"
click = "^8.1.7"

